--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -765,6 +765,8 @@
     <string name="faq_6_title_commons">Mae eicon lansio\'r ap wedi diflannu. Beth alla\'i wneud?</string>
     <string name="faq_6_text_commons">Mae hyn am nad yw dy lansiwr yn cefnogi addasu eiconau yn iawn. Rho gynnig ar lansio\'r ap o Google Play neu ryw declyn, os ar gael.
         Ar ôl iddo lansio, gosoda eicon yr ap nôl i\'r lliw oren rhagosodedig #F57C00. Os nad yw hyn yn bosib neu\'n gweithio, bydd rhaid ailosod yr ap.</string>
+    <string name="faq_7_title_commons">The money has been deducted from my bank account, but I cannot download the app. What can I do?</string>
+    <string name="faq_7_text_commons">Payments are fully handled by Google, their system glitches from time to time. Just clear your Google Play app cache and restart your device, then retry downloading it.</string>
 
     <!-- License -->
     <string name="notice">Mae\'r ap hwn yn defnyddio\'r llyfrgelloedd trydydd parti canlynol i wneud bywyd yn haws. Diolch am bob un.</string>
