escaping an apostrophe

--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -737,7 +737,7 @@
             S\'mae,<br><br>
             Jyst yn rhoi gwybod i ti am ap newydd wedi\'i ryddhau yn ddiweddar:<br><br>
             <a href="%1$s">%2$s</a><br><br>
-            Gellir ei lawrlwytho gan glicio'r teitl.<br><br>
+            Gellir ei lawrlwytho gan glicio\'r teitl.<br><br>
             Hwyl.
         ]]>
     </string>
