--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -95,7 +95,7 @@
     <string name="could_not_create_folder">Impossible de créer le dossier %s</string>
     <string name="could_not_create_file">Impossible de créer le fichier %s</string>
     <string name="no_new_items">Pas de nouveaux éléments trouvés</string>
-    <string name="no_space">La destination n'a pas assez d'espace disponible.\nRequis %1$s, disponible %2$s</string>
+    <string name="no_space">La destination n\'a pas assez d\'espace disponible.\nRequis %1$s, disponible %2$s</string>
 
     <!-- Create new -->
     <string name="create_new">Créer un nouveau</string>
